Доработал экран с детальной информацией о погоде

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -78,4 +79,7 @@ dependencies {
 
     //coroutines
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
