Добавил ui тесты. Добавил возможность удаления города длинным кликом (было нужно для kaspresso)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     testImplementation "org.mockito:mockito-inline:3.11.2"
+
+    //kaspresso
+    androidTestImplementation 'com.kaspersky.android-components:kaspresso:1.4.0'
 }
